chore: #3 워크플로우 수정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,7 @@ jobs:
       - name: Build # React Build
         run: yarn build
         env:
+          VITE_API_URL: ${{ secrets.VITE_API_URL }}
           CI: ""
 
       - name: zip create
